--- a/glide.yaml
+++ b/glide.yaml
@@ -1,3 +1,5 @@
 package: github.com/subchen/go-xmldom
 import:
 - package: github.com/antchfx/xpath
+  version: ^1.2.5
+  repo:    git@github.com:antchfx/xpath
